--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <div class="topnav container d-flex align-items-center justify-content-between">
       <div class="nav-logo">
-        <img src="/images/Logo.png" alt="">
+        <img class="d-block" src="/images/Logo.png" alt="">
       </div>
       <span class="italic uppercase font-bold text-gray">Quality Stainless steel flow equipment</span>
     </div>
@@ -34,44 +34,44 @@
           </svg>
           <div class="dropdown d-flex">
             <ul class="dropdown-list">
-              <li class="nav-dropdown-item"><a href="/Industries/Offices" title="">Offices</a></li>
+              <li class="nav-dropdown-item"><a href="#" title="">products 1</a></li>
               <li class="line-break"></li>
-              <li class="nav-dropdown-item"><a href="/Industries/Multi-Unit" title="">Multi-Unit</a></li>
+              <li class="nav-dropdown-item"><a href="#" title="">products 2</a></li>
               <li class="line-break"></li>
-              <li class="nav-dropdown-item"><a href="/Industries/Industrial" title="">Industrial</a></li>
+              <li class="nav-dropdown-item"><a href="#" title="">products 3</a></li>
               <li class="line-break"></li>
-              <li class="nav-dropdown-item"><a href="/Industries/Restaurants" title="">Restaurants</a></li>
+              <li class="nav-dropdown-item"><a href="#" title="">products 4</a></li>
               <li class="line-break"></li>
-              <li class="nav-dropdown-item"><a href="/Industries/StorageUnits" title="">Storage Units</a></li>
+              <li class="nav-dropdown-item"><a href="#" title="">products 5</a></li>
               <li class="line-break"></li>
-              <li class="nav-dropdown-item"><a href="/Industries/Retail" title="">Retail</a></li>
-          </ul>
-          <ul class="dropdown-list">
-            <li class="nav-dropdown-item"><a href="/Industries/Offices" title="">Offices</a></li>
-            <li class="line-break"></li>
-            <li class="nav-dropdown-item"><a href="/Industries/Multi-Unit" title="">Multi-Unit</a></li>
-            <li class="line-break"></li>
-            <li class="nav-dropdown-item"><a href="/Industries/Industrial" title="">Industrial</a></li>
-            <li class="line-break"></li>
-            <li class="nav-dropdown-item"><a href="/Industries/Restaurants" title="">Restaurants</a></li>
-            <li class="line-break"></li>
-            <li class="nav-dropdown-item"><a href="/Industries/StorageUnits" title="">Storage Units</a></li>
-            <li class="line-break"></li>
-            <li class="nav-dropdown-item"><a href="/Industries/Retail" title="">Retail</a></li>
-        </ul>
-        <ul class="dropdown-list">
-          <li class="nav-dropdown-item"><a href="/Industries/Offices" title="">Offices</a></li>
-          <li class="line-break"></li>
-          <li class="nav-dropdown-item"><a href="/Industries/Multi-Unit" title="">Multi-Unit</a></li>
-          <li class="line-break"></li>
-          <li class="nav-dropdown-item"><a href="/Industries/Industrial" title="">Industrial</a></li>
-          <li class="line-break"></li>
-          <li class="nav-dropdown-item"><a href="/Industries/Restaurants" title="">Restaurants</a></li>
-          <li class="line-break"></li>
-          <li class="nav-dropdown-item"><a href="/Industries/StorageUnits" title="">Storage Units</a></li>
-          <li class="line-break"></li>
-          <li class="nav-dropdown-item"><a href="/Industries/Retail" title="">Retail</a></li>
-      </ul>
+              <li class="nav-dropdown-item"><a href="#" title="">products 6</a></li>
+            </ul>
+            <ul class="dropdown-list">
+              <li class="nav-dropdown-item"><a href="#" title="">products 1</a></li>
+              <li class="line-break"></li>
+              <li class="nav-dropdown-item"><a href="#" title="">products 2</a></li>
+              <li class="line-break"></li>
+              <li class="nav-dropdown-item"><a href="#" title="">products 3</a></li>
+              <li class="line-break"></li>
+              <li class="nav-dropdown-item"><a href="#" title="">products 4</a></li>
+              <li class="line-break"></li>
+              <li class="nav-dropdown-item"><a href="#" title="">products 5</a></li>
+              <li class="line-break"></li>
+              <li class="nav-dropdown-item"><a href="#" title="">products 6</a></li>
+            </ul>
+            <ul class="dropdown-list">
+              <li class="nav-dropdown-item"><a href="#" title="">products 1</a></li>
+              <li class="line-break"></li>
+              <li class="nav-dropdown-item"><a href="#" title="">products 2</a></li>
+              <li class="line-break"></li>
+              <li class="nav-dropdown-item"><a href="#" title="">products 3</a></li>
+              <li class="line-break"></li>
+              <li class="nav-dropdown-item"><a href="#" title="">products 4</a></li>
+              <li class="line-break"></li> 
+              <li class="nav-dropdown-item"><a href="#" title="">products 5</a></li>
+              <li class="line-break"></li>
+              <li class="nav-dropdown-item"><a href="#" title="">products 6</a></li>
+            </ul>
           </div>
 
         </li>
