change file path

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
   <header>
     <div class="topnav container d-flex align-items-center justify-content-between">
       <div class="nav-logo">
-        <img class="d-block" src="/images/Logo.png" alt="">
+        <img class="d-block" src="images/Logo.png" alt="">
       </div>
       <span class="italic uppercase font-bold text-gray">Quality Stainless steel flow equipment</span>
     </div>
@@ -113,7 +113,7 @@
           </ul>
         </div>
         <div class="image-wrap">
-          <img src="/images/pump.jpg" alt="">
+          <img src="images/pump.jpg" alt="">
         </div>
       </div>
     </div>
@@ -272,8 +272,8 @@
             <h2 class="font-bold uppercase">Product Image</h2>
             <h3 class="font-bold uppercase">Subheading / Text about part here</h3>
             <div class="image-wrap d-flex align-items-start">
-              <img src="/images/pump2.jpg" alt="">
-              <img src="/images/pump3.jpg" alt="">
+              <img src="images/pump2.jpg" alt="">
+              <img src="images/pump3.jpg" alt="">
             </div>
           </div>
         </div>
