change logo image path

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <div class="topnav container d-flex align-items-center justify-content-between">
       <div class="nav-logo">
-        <img class="d-block" src="images/Logo.png" alt="">
+        <img class="d-block" src="./images/Logo.png" alt="">
       </div>
       <span class="italic uppercase font-bold text-gray">Quality Stainless steel flow equipment</span>
     </div>
