--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <div class="topnav container d-flex align-items-center justify-content-between">
       <div class="nav-logo">
-        <img class="d-block" src="images/Logo.png" alt="">
+        <img class="d-block" src="/ThomsenCutup/images/Logo.png" alt="">
       </div>
       <span class="italic uppercase font-bold text-gray">Quality Stainless steel flow equipment</span>
     </div>
@@ -67,7 +67,7 @@
               <li class="nav-dropdown-item"><a href="#" title="">products 3</a></li>
               <li class="line-break"></li>
               <li class="nav-dropdown-item"><a href="#" title="">products 4</a></li>
-              <li class="line-break"></li> 
+              <li class="line-break"></li>
               <li class="nav-dropdown-item"><a href="#" title="">products 5</a></li>
               <li class="line-break"></li>
               <li class="nav-dropdown-item"><a href="#" title="">products 6</a></li>
@@ -113,7 +113,7 @@
           </ul>
         </div>
         <div class="image-wrap">
-          <img src="images/pump.jpg" alt="">
+          <img src="/ThomsenCutup/images/pump.jpg" alt="">
         </div>
       </div>
     </div>
@@ -272,8 +272,8 @@
             <h2 class="font-bold uppercase">Product Image</h2>
             <h3 class="font-bold uppercase">Subheading / Text about part here</h3>
             <div class="image-wrap d-flex align-items-start">
-              <img src="images/pump2.jpg" alt="">
-              <img src="images/pump3.jpg" alt="">
+              <img src="/ThomsenCutup/images/pump2.jpg" alt="">
+              <img src="/ThomsenCutup/images/pump3.jpg" alt="">
             </div>
           </div>
         </div>
