--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <header>
     <div class="topnav container d-flex align-items-center justify-content-between">
       <div class="nav-logo">
-        <<<<<<< HEAD <img class="d-block" src="/ThomsenCutup/images/Logo.png" alt="">
-          >>>>>>> 7a7f4eadff9bf0993b8860afc54b8a1eef29c3d7
+        <img class="d-block" src="/ThomsenCutup/images/Logo.png" alt="">
+
       </div>
       <span class="italic uppercase font-bold text-gray">Quality Stainless steel flow equipment</span>
     </div>
